--- a/src/App.css
+++ b/src/App.css
@@ -79,3 +79,27 @@ h1 {
   border: none;
   color: red;
 }
+
+.navbar{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #000;
+}
+
+.navbar li {
+  float: left;
+}
+
+.navbar li a{
+  display: block;
+  color: #fff;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.navbar li a:hover {
+  background-color: blue;
+}
